--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   padding: 10rem 0 2rem;
+   padding: 4rem 0;
    font-family: 'Kumbh Sans', sans-serif;
    font-weight: 400;
 }
