--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ hr{
         grid-area: 1/2/-1/3;
         margin: 0 auto;
         width: 80%;
-        padding: 2rem 0 4rem;
+        padding: 4rem 6rem 4rem 2rem;
     }
     .faqs h2 {
         text-align: left;
